# theetl

./: README.md  app.py  pyproject.toml  setup.py
config/: etl-example.yaml
etl/extraction/: avro.py
etl/filters/: filters.py
etl/load/: big_query.py  pub_sub.py
etl/transformation/: processing.py
theetl/: etl.py
